Added output textbox

--- a/css/admin.css
+++ b/css/admin.css
@@ -1,15 +1,17 @@
 body{ 
-    background-image:url("../img/background.jpg"); 
-    background-repeat:no-repeat; 
-    background-position:center; 
     padding:10px;
-}
-
-body{
     background: #085078; /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #085078, #85d8ce); /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #085078, #85d8ce); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
 }
+
+.col-centered{
+    margin:0 auto;
+    margin-top:2em;
+ }
+
 .background{
     background:rgba(255,255,255,0.79);
     padding:2em;
@@ -21,8 +23,16 @@ body{
     border-top: 1px solid #808080;
     padding-top:1em;
 }
-
+#input, #output{
+    font-family:times-new-roman;
+    font-size:18px;
+}
+#input{
+    white-space: pre;
+}
+#output{
+    word-wrap: break-word;
+}
 #title, #title-text{
     margin-bottom:1em;
-
 }
